--- a/tp5/application/index/view/index/login.html
+++ b/tp5/application/index/view/index/login.html
@@ -76,7 +76,7 @@
                 </label>
                 <br/>
                 <button class="btn btn-large btn-primary" type="submit">登陆</button>
-                <button class="btn btn-large btn-primary" ><a href="{:url('index/index/refister')}">注册</a></button>
+              <button class="btn btn-large btn-primary" ><a style="color: #fff;" href="{:url('index/index/refister')}">注册</a></button>
             </form>
  
         </div> <!-- /container -->
