--- a/tp5/application/index/view/index/personal.html
+++ b/tp5/application/index/view/index/personal.html
@@ -199,12 +199,12 @@
 
 						<p class="button-height inline-label">
 							<label for="xpwd" class="label">新密码</label>
-							<input type="text" name="xpwd" id="xpwd" class="input validate[required]" value="" data-tooltip-options='{"position":"right"}'>
+							<input type="password" name="xpwd" id="xpwd" class="input validate[required]" value="" data-tooltip-options='{"position":"right"}'>
 						</p>
 
 						<p class="button-height inline-label">
 							<label for="qrpwd" class="label">密码确认</label>
-							<input type="text" name="qrpwd" id="qrpwd" class="input validate[required,custom[email]]" value="">
+							<input type="password" name="qrpwd" id="qrpwd" class="input validate[required,custom[email]]" value="">
 						</p>
 
 						<button type="submit">提交</button>
@@ -278,13 +278,68 @@
 				<li class="title-menu">Today's event</li>
 				<li>
 					<ul class="calendar-menu">
+						{volist name="resultnow" id="vo"}
 						<li>
-							<a href="#" title="See event">
-								<time datetime="2011-02-24"><b>24</b> Feb</time>
-								<small class="green">10:30</small>
-								Event's description
+							<a href="{:url('index/index/agenda')}" title="See event">
+								<time ><b><span id="idata"></span></b> <span id="imonth"></span></time>
+								<small class="green">
+									<script type="text/javascript">
+									var d = new Date()
+									var date=d.getDate();
+									var month=d.getMonth();
+									switch(month+1)
+{
+
+	case 1:
+	month = "Jan";
+	break;
+	case 2:
+	month = "Feb";
+	break;
+	case 3:
+	month = "Mar";
+	break;
+	case 4:
+	month = "Apr";
+	break;
+	case 5:
+	month = "MAY";
+	break;
+	case 6:
+	month = "Jun";
+	break;
+	case 7:
+	month = "Jul";
+	break;
+	case 8:
+	month = "Aug";
+	break;
+	case 9:
+	month = "Sep";
+	break;
+	case 10:
+	month = "Oct";
+	break;
+	case 11:
+	month = "Nov";
+	break;
+	case 12:
+	month = "Dec";
+	break;
+	default:
+	month = "this is a bug";
+}
+									 document.getElementById('idata').innerHTML=date;
+									 document.getElementById('imonth').innerHTML=month;
+									document.write(d.getHours())
+									document.write(":")
+									document.write(d.getMinutes())
+									</script>
+								</small>
+							{$vo.thing}
 							</a>
 						</li>
+						{/volist}
 					</ul>
 				</li>
 				<li class="title-menu">New messages</li>
